Funcoes e elemtos de pagina

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 	</head>
 	<body>
 		
+		<button type"button" onclick="botao()">Clique aqui</button>
+		<button type"button" onclick="botao2()">Clique aqui2</button>
+		<h3 id="ad"></h3>
+		<button type"button" onclick="botao3()">Clique aqui3</button>
+		<a id="ad2"></a>
+		<button type"button" onclick="botao4()">Clique aqui4 pra abir em outra janela</button>
+		
+		<button type"button" onclick="botao5()">Clique aqui5 pra abrir na mesma janela</button>
+	
+		<p id="mouse" onmouseover="troca()" onmouseout="volta()">"passe o mouse aqui"</p>
+	
+		<select onchange="funcao(this)">
+			<option value="1"> Valor 1 </option>
+			<option value="2"> Valor 2 </option>
+		</select>
+	
 	
 	</body>
 	 
